# GenPop

./: CMakeLists.txt  README.md  makefile.save  python.Rmd  python.html  rapport.Rmd  rapport.html
results/: Autofecondation_0.txt  Autofecondation_100.txt  Autofecondation_50.txt  Autofecondation_75.txt  CycleDemographique_1.txt  CycleDemographique_2.txt  CycleDemographique_5.txt  SexRatio_10.txt  SexRatio_25.txt  SexRatio_5.txt  SexRatio_50.txt  SexRatio_Ne.txt  WrightFisher_N100.txt  WrightFisher_N50.txt  WrightFisher_N500.txt  resultvar0.txt  resultvar10.txt  resultvar20.txt  resultvar30.txt  resultvar40.txt  resultvar49.txt
results/ne/: test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test22  test23  test24  test25  test26  test27  test28  test29  test3  test30  test31  test32  test33  test34  test35  test36  test37  test38  test39  test4  test40  test41  test42  test43  test44  test45  (+59 more)
src-projet/: d_util.c  d_util.h  genpop.c  genpop.h  main.c  makefile  model_Autofecondation.c  model_CycleDemographique.c  model_SexRatio.c  model_Variance.c  model_WrightFisher.c
